hphp/test/zend/good/ext/gmp/tests/gmp_scan0.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("gmp")) print "skip";
}
