hphp/test/zend/bad/ext/gmp/tests/gmp_nextprime.php.skipif
<?php if (!extension_loaded("gmp")) print "skip";
?>